# prism-compose

./: .gitignore  Main.hs  README.md  compose.cabal
src/: Compose.hs  Error.hs  Parallel.hs  Parser.hs  Preprocessor.hs  SrcLoc.hs  Syntax.hs
src/Parser/: Internal.hs
src/Syntax/: Operators.hs
