name:          compose
version:       0.1.0
synopsis:      Parallel composition of Prism modules
description:   This tool performs the parallel composition of Prism
               modules on the source code level.
license:       GPL-3
license-file:  LICENSE
author:        Philipp Chrszon
maintainer:    Philipp.Chrszon@tu-dresden.de
copyright:     2015 Philipp Chrszon
category:      Language
build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:
    Compose
  build-depends:
    base >=4.8 && <4.9
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable compose
  main-is:          Main.hs
  build-depends:
    base >=4.8 && <4.9,
    compose
  default-language: Haskell2010
  ghc-options:      -Wall

