name:          compose
version:       1.4.2
synopsis:      Parallel composition of Prism modules
description:   This tool performs the parallel composition of Prism
               modules on the source code level.
license:       GPL-3
license-file:  LICENSE
author:        Philipp Chrszon
maintainer:    Philipp.Chrszon@tu-dresden.de
copyright:     (c) 2021 Philipp Chrszon
category:      Language
build-type:    Simple
cabal-version: >=1.10
extra-source-files:
  README.md

library
  exposed-modules:
    Compose,
    Error,
    Parallel,
    Parser,
    Parser.Internal,
    Preprocessor,
    SrcLoc,
    Syntax,
    Syntax.Operators
  other-modules:
    Paths_compose
  build-depends:
    base,
    containers,
    lens,
    mtl,
    optparse-applicative,
    parsec,
    text,
    wl-pprint-text
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable compose
  main-is:          Main.hs
  build-depends:
    base,
    compose
  default-language: Haskell2010
  ghc-options:      -Wall

